# MPI_Practical_Course

./: .travis.yml  README.md  appveyor.yml
modules/task_1/: CMakeLists.txt
modules/task_1/nesterov_test_task/: CMakeLists.txt  main.cpp
modules/task_2/Repin_Vladimir_Gaussian_Elimination/: main.cpp
modules/task_3/: CMakeLists.txt
modules/task_3/Druzhinin_Alexei_task3_Shell_with_SimpleMerge/: CMakeLists.txt  main.cpp
modules/task_3/Gaidaichuk_Yuri_task3_Monte_Carlo/: CMakeLists.txt  main.cpp
modules/task_3/Perov_Dima_task3_ShellMergeSort/: CMakeLists.txt  main.cpp
modules/task_3/Repin_Vladimir_Edge_Detection/: CMakeLists.txt  main.cpp
modules/task_3/Vdovin_Eugene_task3_AGP/: CMakeLists.txt  main.cpp
modules/task_3/Vikhrev_Ivan_task3_radix_sort/: CMakeLists.txt  main.cpp
modules/task_3/Yakovlev_Pavel_Quicksort_SimpleMerge/: CMakeLists.txt  main.cpp
