message(STATUS "Task 3")
add_subdirectory( ndanilov_qsort )
add_subdirectory( Perov_Dima_task3_ShellMergeSort )
add_subdirectory( Gaidaichuk_Yuri_task3_Monte_Carlo )
add_subdirectory( Vdovin_Eugene_task3_AGP )
add_subdirectory( Vikhrev_Ivan_task3_radix_sort )
add_subdirectory( Yakovlev_Pavel_Quicksort_SimpleMerge )
